# chunksplitter

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE.md  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: keys.rs  ldb.rs  lib.rs  merge.rs  nbt.rs  split.rs  subchunk.rs
lib/tests/: round_trip.rs
test_worlds/parkour/db/: LOG.old
test_worlds/void/: level.dat_old  levelname.txt
test_worlds/void/db/: 000005.ldb  000008.ldb  LOG.old  MANIFEST-000010
test_worlds/voidworld_large/: levelname.txt
test_worlds/voidworld_large/db/: 000053.ldb  000054.ldb  000055.ldb  000056.ldb  000057.ldb  000058.ldb  000059.ldb  000060.ldb  000061.ldb  000062.ldb  000063.ldb  000064.ldb  000065.ldb  000066.ldb  000067.ldb  000068.ldb  000069.ldb  000070.ldb  000071.ldb  LOG.old  MANIFEST-000004
